--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://geminisubs12_db_user:u2li9VgGPS6KHFEi@plate-share-assignment.0zqlosv.mongodb.net/plateshare?retryWrites=true&w=majority
 PORT=4000
-GOOGLE_APPLICATION_CREDENTIALS=C:\abs\path\to\serviceAccount.json
+
+GOOGLE_APPLICATION_CREDENTIALS=./firebase-admin.json
